--- a/src/components/ui/primitives/Button.module.css
+++ b/src/components/ui/primitives/Button.module.css
@@ -2,6 +2,7 @@
   position: relative;
   isolation: isolate;
   --chromatic-shift: 0px;
+  --chromatic-blur: 0px;
   --chromatic-opacity: 0;
 }
 
@@ -14,11 +15,12 @@
   opacity: 0;
   box-shadow: var(--shadow-control-hover), var(--shadow-neon-soft);
   filter: drop-shadow(
-      calc(var(--chromatic-shift) * -1) 0
+      calc(var(--chromatic-shift) * -1) 0 var(--chromatic-blur)
         hsl(var(--primary) / var(--chromatic-opacity))
     )
     drop-shadow(
-      var(--chromatic-shift) 0 hsl(var(--danger) / var(--chromatic-opacity))
+      var(--chromatic-shift) 0 var(--chromatic-blur)
+        hsl(var(--danger) / var(--chromatic-opacity))
     );
   transform: translate3d(0, 0, 0);
   transition:
@@ -37,6 +39,7 @@
 .root[data-selected="true"]::after {
   opacity: 1;
   --chromatic-shift: var(--spacing-0-25);
+  --chromatic-blur: var(--spacing-0-5);
   --chromatic-opacity: 0.55;
 }
 
@@ -46,6 +49,7 @@
 .root[aria-disabled="true"]::after {
   opacity: 0;
   --chromatic-shift: 0px;
+  --chromatic-blur: 0px;
   --chromatic-opacity: 0;
 }
 
