--- a/src/components/planner/PlannerPage.module.css
+++ b/src/components/planner/PlannerPage.module.css
@@ -44,6 +44,10 @@
   .heroPortrait {
     grid-column: span 5;
     justify-self: end;
+    justify-items: end;
+  }
+  .heroPortraitChip {
+    justify-self: end;
   }
 }
 
@@ -85,6 +89,11 @@
   display: grid;
   justify-items: center;
   align-items: center;
+  gap: var(--space-3);
+}
+
+.heroPortraitChip {
+  width: min(100%, 18rem);
 }
 
 .heroDial {
